--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -24,6 +24,7 @@
         android:id="@+id/history"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="60px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
