--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -31,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button"
+        android:layout_marginTop="5dp"
         android:text="Зарезервировать"
         android:textColor="@color/purple_200" />
 </LinearLayout>
